[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blackjack"
version = "0.1.0"
description = "A simple Blackjack game implemented in Python."
authors = [{ name = "Adel Siddiquei", email = "adelsiddiquei@gmail.com" }]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]




